--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>하이루</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat maiores a incidunt corrupti animi harum, explicabo asperiores vero provident fuga delectus laudantium, ullam, est officia aperiam. Quos laudantium accusamus molestiae.</p>
 </body>
 </html>
