--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>하이루</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat maiores a incidunt corrupti animi harum, explicabo asperiores vero provident fuga delectus laudantium, ullam, est officia aperiam. Quos laudantium accusamus molestiae.</p>
+    <p>보호 걸어놨는데 푸시가 왜 되냐 진짜</p>
 </body>
 </html>
